26-08-19 Franz Holzinger <franz@ttproducts.de>
    * adaptions according to the coding guidelines

24-08-19 Franz Holzinger <franz@ttproducts.de>
    * support for TYPO3 9.5 in combination with the extension typo3db_legacy.

24-01-19 Franz Holzinger <franz@ttproducts.de>
    * bugfix error message: Invalid database result detected: function TYPO3\CMS\Core\Database\DatabaseConnection->sql_free_result 

18-01-19 Franz Holzinger <franz@ttproducts.de>
    * do not debug direct SQL queries about the SESSION
    * change the constants TRUE, FALSE and NULL into lower case

17-09-08 Franz Holzinger <franz@ttproducts.de>
    * add a composer.json file
    * support for TYPO3 8.7

16-06-30 Franz Holzinger <franz@ttproducts.de>
	* works also under TYPO3 7.x and PHP 7.x
	* fix bug: add a check for valid $uidIndexField in exec_SELECTgetRows

15-10-21 Franz Holzinger <franz@ttproducts.de>
	* fix bug with not debugged error case when no alias table name has been used
	* TYPO3 6.2 uses the method query($query) instead of $this->link->query($query)
	* fix bug with getLastInsertId

15-07-21 Franz Holzinger <franz@ttproducts.de>
	* fix bug with unknown PreparedStatement::class

15-06-18 Franz Holzinger <franz@ttproducts.de>
	* fix bug #67459: uncomment the bugfix

15-06-16 Franz Holzinger <franz@ttproducts.de>
	* fix bug #67459: TYPO3 6.2.x has a table sys_refindex which misses the field uid.

13-12-19 Franz Holzinger <franz@ttproducts.de>
	* require TYPO3 6.1.x or 6.2.x
	* add prepare_SELECTquery

13-06-04 Franz Holzinger <franz@ttproducts.de>
	* use namespaces and require TYPO3 6.0.x
	* remove query building functions because they do not generate a debug output
	* use the MYSQL function LAST_INSERT_ID if sql_insert_id gives no result

12-06-06 Franz Holzinger <franz@ttproducts.de>
	* fix bug: SQL ERROR shall be shown even if a table is not in the $TCA and TCA is set.
	* add admin_query
	* add autoloader
	* use t3lib_utility_Debug if available
